tests/ui_board/snapshots/ui_board__snapshots__discovered_invocations_use_the_annotation_visual_role@portable.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 128
expression: "snapshot(&mut fixture, 58, 8, ThemePreference::Dark)"
---
SIZE 58x8

TEXT
00││
01│⋮ /plan ask $review│
02│  Use /implement-in-worktree then /plan│
03││
04│  proqi-ui-contract│
05│  1 thought · board · saving│
06│  n New   : Commands  ? Shortcuts│
07│  → Codex   s Submit    Shift+S Submit & keep│

STYLE RUNS
0: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-1 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 2-6 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 7-11 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 12-18 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 19-57 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-5 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 6-27 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 28-57 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-55 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 56-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-11 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 12-12 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 13-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 24-30 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 31-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
