tests/ui_board/snapshots/ui_board__snapshots__fast_navigation_shortcuts_are_visible_in_edit_help.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 477
expression: "snapshot(&mut fixture, 120, 14, ThemePreference::Dark)"
---
SIZE 120x14

TEXT
00│┌ proqi shortcuts ───────────────────────────────────────────────────────────────────────────────────────────────────[x]│
01││Esc                        Close                           Cmd+C                      Copy                            ││
02││Cmd+X                      Cut                             Cmd+V                      Paste exactly                   ││
03││Cmd+Shift+V                Paste reflow                    Cmd+A                      Select all                      ││
04││Cmd+U                      Delete logical line             Cmd+Shift+U                Delete sentence                 ││
05││Cmd+Z                      Undo                            Cmd+Shift+Z/Cmd+Y          Redo                            ││
06││Cmd+T                      Split/extract                   Option+↑/↓/PageUp/PageDown Move 5 rows                     ││
07││Cmd+↑/↓                    Start/end                       Cmd+Shift+H/←/L/→          Select visual row               ││
08││↑/↓                        Neighbor/new                                                                               ││
09││                                                                                                                      ││
10││                                                                                                                      ││
11││                                                                                                                      ││
12││                                                                                                                      ││
13│└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│

STYLE RUNS
0: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-17 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 18-116 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 117-119 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-3 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 4-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-5 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 6-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-11 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 12-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-5 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 6-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-70 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 71-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-5 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 6-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-76 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 77-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-5 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 6-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-85 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 86-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-7 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 8-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 60-76 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 77-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-3 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 4-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
